feat: Add ai-assistant and add tags page

--- a/_config.yml
+++ b/_config.yml
@@ -13,5 +13,8 @@ rss: /atom.xml
 # Nav menu
 menu:
   Home: /
+  Tags: /tags/
   Github: https://github.com/dexhunter
   RSS: /atom.xml
+
+per_page: 20
